fix title's position on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,12 @@ widescreen: from 1192px
     left: 0;
     transform: translate3d(0,-100%,0);
   }
+
+  header h1 {
+    font-size: 24px;
+    position: relative;
+    display: inline-block;
+  }
 }
 
 @media screen and (min-width: 769px) and (max-width: 999px) {
